[package]
name = "LavaLamp"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
reqwest = { version = "0.11", features = ["blocking"] }
base64 = "0.21"
rpassword = "7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
